feat: implement web-app and automatic Telegram PDF invoicing
